[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://TriviaMain.gd" type="Script" id=2]
[ext_resource path="res://levels/Level.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 93
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 29
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 29
font_data = ExtResource( 1 )

[node name="TriviaMain" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 70.0
margin_top = 90.0
margin_right = 410.0
margin_bottom = 440.0
custom_fonts/font = SubResource( 1 )
text = "Trivia Games"
align = 1
autowrap = true

[node name="Button" type="Button" parent="."]
margin_left = 116.0
margin_top = 365.0
margin_right = 374.0
margin_bottom = 478.0
custom_fonts/font = SubResource( 2 )
text = "Classic Trivia"

[node name="Button2" type="Button" parent="."]
margin_left = 118.0
margin_top = 510.0
margin_right = 376.0
margin_bottom = 623.0
custom_fonts/font = SubResource( 3 )
text = "Doodle Jump"

[node name="Trivia" parent="." instance=ExtResource( 4 )]

[node name="Level" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="quit" from="Trivia" to="." method="_on_Trivia_quit"]
[connection signal="trivia" from="Trivia" to="." method="_on_Trivia_trivia"]
